<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Uber_clone</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="criar">Criar</string>
    <string name="senha">Senha</string>
    <string name="email_v_lido">Email válido</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="entar">Entar</string>
    <string name="passegeiro">Passegeiro</string>
    <string name="motorista">Motorista</string>
    <string name="aceder_a_minha_conta">Aceder a minha conta</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="utilizador_passageiro_criado_com_sucesso">Utilizador Passageiro criado com sucesso!</string>
    <string name="intreduza_uma_senha_mais_forte">Intreduza uma senha mais forte</string>
    <string name="intreduza_um_email_v_lido">Intreduza um email válido!</string>
    <string name="este_email_j_est_em_uso">Este email já está em uso!</string>
    <string name="erro_ao_criar_utilizador">Erro ao criar utilizador!</string>
    <string name="utilizador_registado_com_sucesso">Utilizador registado com sucesso!</string>
    <string name="erro_realizar_login_utilizador">Erro realizar login utilizador!</string>
    <string name="utilizador_n_o_registado">Utilizador não registado</string>
    <string name="email_ou_password_incorretos">Email ou password incorretos</string>
    <string name="login_realizado_com_sucesso">Acesso realizado com sucesso!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="iniciar_uma_viagem">Iniciar uma viagem</string>
    <string name="sair">Sair</string>
    <string name="interduza_o_destino">Interduza o destino</string>
    <string name="interduza_sua_localizac_o">Interduza sua localizacão</string>
    <string name="chamar_uber">Chamar Uber</string>
    <string name="cancelar_uber">Cancelar Uber</string>
    <string name="requests">Requests</string>
    <string name="aguardando_pedidos">Aguardando pedidos…</string>
    <string name="_0km_aproximadamente">0km - aproximadamente</string>
    <string name="nome_do_passageiro">Nome do passageiro</string>


    <string name="aceitar_viagem">Aceitar viagem</string>
    <string name="a_caminho_do_destino">A caminho do destino</string>
    <string name="a_caminho_do_passageiro">A caminho do passageiro</string>
    <string name="a_motorista_est_a_caminho">A motorista está a caminho</string>
    <string name="chegou_ao_destino">Chegou ao destino!</string>
    <string name="fim_da_viagem">Fim da viagem - €</string>
    <string name="motorista_a_caminho">Motorista a caminho</string>
    <string name="total_da_viagem">Total da viagem</string>
    <string name="total_da_viagem_pagar">"Total da viagem á pagar: € "</string>
    <string name="encerrar_viagem">Encerrar viagem</string>
    <string name="erro_ao_encerrar_a_viagem">Erro ao encerrar a viagem.</string>
    <string name="total_pagar_pelo_cliente">"Total pagar pelo cliente: € "</string>

</resources>