<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/content_passenger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white_100"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


        <EditText
            android:id="@+id/editTextText_destination"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/interduza_sua_localizac_o"
            android:background="@color/white_100"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/dw_circle_green"
            android:textColor="@color/limedSprude_100"
            android:textColorHint="@color/limedSprude_100"
            android:textSize="@dimen/_18sp"
            />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:background="@color/white_100"
            android:hint="@string/interduza_o_destino"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/dw_circle_grey"
            android:textColor="@color/limedSprude_100"
            android:textColorHint="@color/limedSprude_100"
            android:textSize="@dimen/_18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_goToMapLocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/chamar_uber"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white_100"
            android:backgroundTint="@null"
            style="@style/buttonStyle"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>